# Pangu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
src/animation/: animation.h
src/audio/: audio_device.h
src/editor/: gizmo.h  prefab_system.h  settings.h  utils.h  wordeditor.h
src/engine/: allocator.h  allocators.cpp  allocators.h  command_line_parser.h  control_device.h  core.cpp  core.h  geometry.cpp  geometry.h  hash.cpp  hash.h  input_system.cpp  input_system.h  jobsystem.cpp  jobsystem.h  log.cpp  log.h  pangu.h  path.cpp  path.h  plugin.cpp  plugin.h  prefab.cpp  prefab.h  queue.h  reflection.cpp  reflection.h  resource_manager.cpp  resource_manager.h  string.cpp  string.h  sync.h  thread.h  universe.cpp  universe.h
src/gui/: gui_system.cpp  gui_system.h
src/lua_script/: lua_script_system.h
